--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            position: relative;
         }
 
         .input-box {
@@ -124,6 +125,11 @@
             width: 24px;
             height: 24px;
             animation: spin 2s linear infinite;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
         }
 
         @keyframes spin {
@@ -139,13 +145,13 @@
         </div>
         <div class="chat-box" id="chat-box">
             <!-- Messages will be appended here -->
+            <div class="loading" id="loading"></div>
         </div>
         <div class="input-box">
             <input type="text" id="user-input" placeholder="Type a message..." />
             <button onclick="sendMessage()">Send</button>
         </div>
     </div>
-    <div class="loading" id="loading"></div>
 
     <script>
         const drones = [];
