--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         }
 
         .chat-container {
-            width: 53vw;
+            width: 90vw;
+            max-width: 600px;
             height: 80vh;
             border: 1px solid #ccc;
             border-radius: 20px;
